Switched up the startGeode.sh script to not care about JDK versions by removing most of the garbage collector options ApacheDS is having issues with newer JDK testing with TLS I have disabled TLS testing until we figure out another TLS testing strategy.   The code still works Update to newer gradle Had ChatGPT optimize the generateCerts.sh script just incase I was missing something with Apache DS SSL not working. Updated GemFire to 10.1 Update JUnit Changed Group Name to remove pivotal